- Añadida función getTimer() para obtener el tiempo de ejecución de un temporizador. Además, la función stopTimer() devuelve ahora el tiempo de ejecución. - Nueva versión del kernel. La 2023.13

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -454,7 +454,7 @@
     "documents-generated": "Documentos xerados",
     "domiciled": "Domiciliado",
     "done": "Feito",
-    "done-date": "Fecha finalización",
+    "done-date": "Data finalización",
     "dont-sell-above-pvp": "Non vender por riba do PVP",
     "dont-sell-below-cost": "Non vender por debaixo do custo",
     "download": "descargar",
@@ -506,7 +506,7 @@
     "equivalent-account-not-found": "Non se puido atopar conta equivalente a %accountCode%  no exercicio %exerciseCode%.  Importaches o plan contable?",
     "equivalent-subaccount-not-found": "Non se atopou ningunha subconta equivalente a %subAccountCode% para copiar.",
     "error": "ERRO:  %error%",
-    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
+    "error-checking-vat-number": "Erro comprobando o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar co servidor Memcache.",
     "error-deleting-lines": "Erro ao eliminar liñas",
     "error-no-name-in-settings": "Error na vista %viewName%. Falta informar el 'name' nalgunha columna do xml",
@@ -536,7 +536,7 @@
     "es-tax-regime-surcharge": "Recargo de equivalencia",
     "es-tax-regime-telecom": "Rexímenes especiais aplicables aos servicios de telecomunicacións, de radiodifusión ou de televisión e aos prestados por vía electrónica",
     "es-tax-regime-travel": "Rexime especial das axencias de viaxes",
-    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
+    "es-tax-regime-used-goods": "Réxime especial dos bens usados, obxectos de arte, antigüidades e obxectos de colección",
     "estimation": "Orzamento",
     "estimation-email-subject": "O seu orzamento %code%",
     "estimation-email-text": "Ola, adxunto o seu orzamento %code%",
@@ -565,23 +565,23 @@
     "export": "Exportar",
     "export-bill": "Factura de exportación",
     "extra-file": "Arquivo extra",
-    "failed": "Fallido",
+    "failed": "Fallo",
     "families": "Familias",
     "family": "Familia",
     "family-code": "Código familiar",
     "fax": "Fax",
-    "february": "Febrero",
+    "february": "Febreiro",
     "field-can-not-be-null": "O campo %fieldName% da táboa %tableName% non pode ser nulo",
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
-    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
+    "file-extension-not-accepted": "Erro ó enviar o arquivo %fileName% porque a súa extensión non está permitida. As extensións permitidas son: %accepted%",
     "file-name": "Nome de arquivo",
     "file-not-exists": "O arquivo non existe %fileName%",
     "file-not-found": "Arquivo  %fileName% non atopado.",
     "file-not-supported": "O ficheiro non é compatible",
-    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
-    "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
+    "file-size-error": "Erro ó enviar o arquivo %fileName% porque supera o tamaño máximo permitido de %maxSize% MB",
+    "file-type-error": "Erro ó enviar o arquivo de tipo%typeFile%. Os tipos admitidos son: audio, documento, imaxe e video.",
     "file-yet-exists": "Xa existe o arquivo: %filePath%",
     "filecache-clear": "Filecache limpo.",
     "filecache-delete-key-item": "Elemento eliminado '%item%' de Filecache.",
@@ -610,7 +610,7 @@
     "footer-text": "Texto pé de páxina",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "Para todos os exercicios",
     "for-purchase": "Para compra",
     "for-sale": "En venda",
     "foresee": "Prever",
@@ -633,7 +633,7 @@
     "general-concepts": "Conceptos xerais",
     "general-data": "Datos xerais",
     "generate": "Xerar",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Xerar asientos",
     "generate-accounting-entry": "Xerar asento contable",
     "generate-doc-type": "Xerar tipo de documento",
     "generate-invoice": "Acción para crear facturas",
@@ -681,10 +681,10 @@
     "group-or-split-p": "Este asistente permite xerar un novo documento a partir das liñas doutros. Seleccione as cantidades que desexa usar, a data do novo documento e pulse o botón xerar.",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Ten adxuntos",
     "has-parent": "Ten pai",
     "hash": "Hash",
-    "header": "Cabecera",
+    "header": "Cabeceira",
     "heading-account-group-id": "Grupo de ID de conta de título",
     "heading-account-id-root": "ID pai",
     "health": "Saúde",
@@ -694,7 +694,7 @@
     "help-server-accepts-filesize": "Este servidor admite un tamaño máximo de %size% MB.",
     "hide": "Ocultar",
     "high": "Alto",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Prezo máis alto",
     "hint-create-accounting-entry": "Crear o asento contable para a regularización dos impostos do periodo",
     "hint-vat-register": "Ver\/modificar rexistro do imposto",
     "history": "Historial",
@@ -713,7 +713,7 @@
     "image": "Imaxe",
     "images": "Imaxes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
-    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
+    "impacted-tax-re-subaccount": "Subconta recargo repercutido",
     "impacted-tax-subaccount": "Subconta IVE repercutido",
     "import": "Importar",
     "import-accounting-plan": "Importar plan contable",
@@ -743,7 +743,7 @@
     "invalid-date-there-are-invoices-after": "Data non válida. Hai facturas con data posterior ao %date%",
     "invalid-date-there-are-invoices-before": "Data non válida. A data %date% é posterior a data da factura seguinte.",
     "invalid-iban": "IBAN non válido: %iban%",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Código ISO ''%iso-code% non válido",
     "invalid-number": "Número non válido: %number%",
     "invalid-request": "Petición non válida",
     "invalid-user-can-permission": "Permiso non válido: %permission%. Os permisos dispoñibles son access, delete, export, import, update e only-owner-data.",
@@ -777,16 +777,16 @@
     "items-removed-correctly": "Elementos quitados corretamente",
     "ivarep-subaccount-not-found": "Subconta de IVE repercutido non atopada",
     "ivasop-account-not-found": "Subconta de IVE soportado non atopada",
-    "january": "Enero",
+    "january": "Xaneiro",
     "job-name": "Nome do traballo",
     "journal": "Diario",
     "journal-closing": "Diario de peche",
     "journal-opening": "Diario de apertura",
     "journals": "Diarios",
-    "july": "Julio",
-    "june": "Junio",
+    "july": "Xullo",
+    "june": "Xuño",
     "justified": "Xustificado",
-    "key-google-maps": "Clave de Google Maps",
+    "key-google-maps": "Chave de Google Maps",
     "keys": "Claves",
     "lang-code": "Código de idioma",
     "language": "Idioma",
@@ -872,7 +872,7 @@
     "logs": "Logs",
     "long": "Longo",
     "longitude": "Lonxitude",
-    "longitude-abb": "Long",
+    "longitude-abb": "Lon",
     "look-for-gaps": "Buscar ocos",
     "lot": "Lote",
     "low-security": "Baixa seguridade",
@@ -900,8 +900,8 @@
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sen CIF\/NIF",
     "maximum-stock": "Máximo stock",
-    "may": "Mayo",
-    "mega-search": "MegaBuscador",
+    "may": "Maio",
+    "mega-search": "MegaProcurador",
     "memcache": "Memcache %s",
     "memcache-clear": "Memcache eliminado.",
     "memcache-delete-key-item": "Eliminouse o elemento '%item%' de Memcache.",
@@ -931,18 +931,18 @@
     "model-not-found": "Modelo non atopado",
     "monday": "Luns",
     "month": "Mes",
-    "month-1": "Enero",
-    "month-10": "Octubre",
-    "month-11": "Noeviembre",
-    "month-12": "Diciembre",
-    "month-2": "Febrero",
+    "month-1": "Xaneiro",
+    "month-10": "Outubro",
+    "month-11": "Novembro",
+    "month-12": "Decembro",
+    "month-2": "Febreiro",
     "month-3": "Marzo",
     "month-4": "Abril",
-    "month-5": "Mayo",
-    "month-6": "Junio",
-    "month-7": "Julio",
+    "month-5": "Maio",
+    "month-6": "Xuño",
+    "month-7": "Xullo",
     "month-8": "Agosto",
-    "month-9": "Septiembre",
+    "month-9": "Setembro",
     "month-name": "Nome do mes",
     "month-wildcard-info": "Mes actual (da data actual)",
     "monthly": "Mensualmente",
@@ -983,7 +983,7 @@
     "no-invoice": "Sen factura",
     "no-outstanding-amount": "Non hai importe pendente",
     "no-print-permission": "Non ten permiso para imprimir ou exportar",
-    "no-reference": "Sin referencia",
+    "no-reference": "Sen referencia",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "Non controlar stock",
     "non-editable-accounting-entry": "Asento non editable",
@@ -995,7 +995,7 @@
     "not-allowed-modify": "Non ten permiso para mudar",
     "not-enough-stock": "Non hai suficientes existencias de %reference%",
     "not-passed-integrity-check": "Algúns arquivos non pasaron a verificación de integridade ... <br\/>Podes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter máis detalles aquí<\/a>.",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Contido non almacenado",
     "not-valid-email": "Email %email% non válido",
     "not-valid-fiscal-number": "O %type% %number% non é válido",
     "not-valid-percentage-retention": "Porcentaxe non válido. Debe ser maior de 0.00",
@@ -1005,16 +1005,16 @@
     "notices": "Avisos",
     "notification": "Notificación",
     "notifications": "Notificaciones",
-    "november": "Noviembre",
+    "november": "Novembro",
     "number": "Número",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Nº de adxuntos",
     "number-length": "Lonxitude do número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
     "numeric-formats": "Formatos numéricos",
     "numsupplier": "Num. provedor",
     "observations": "Observacións",
-    "october": "Octubre",
+    "october": "Outubro",
     "offsetting-account": "Contrapartida",
     "only-active": "soamente activos",
     "only-charged": "Só pagados",
@@ -1080,7 +1080,7 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% impostos",
     "pct-vat": "% Imposto",
     "pending": "Pendente",
     "pending-invoices-button": "Fact. ptes:",
@@ -1097,7 +1097,7 @@
     "phone": "Teléfono",
     "phone2": "Teléfono 2",
     "phones": "puntos",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "Requirese a extensión %extension% na configuración de PHP",
     "php-extension-not-found": "Non tes a extensión %extension% de PHP instalada.",
     "php-support-end": "O soporte para PHP %current% rematará pronto. Por favor, actualiza PHP á versión %min% ou superior.",
     "physical-stock": "Accións físicas",
@@ -1141,7 +1141,7 @@
     "price-with-tax": "prezo con impostos",
     "principal": "Principal",
     "print": "Imprimir",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "Imprimir conta bancaria",
     "print-data-records": "Imprimir todos os rexistros",
     "print-export-options": "Opcións de impresión e exportación",
     "print-list-of-records": "Imprimir lista de rexistros",
@@ -1186,7 +1186,7 @@
     "re": "RE",
     "re-open": "Reabrir",
     "react": "Reaccionar",
-    "read-message-by": "Leído por %nick% el %date%",
+    "read-message-by": "Lido por %nick% o %date%",
     "read-more": "Ler máis",
     "readonly": "Só lectura",
     "rebuild": "Reconstruir",
@@ -1233,15 +1233,15 @@
     "renumber-accounting": "Renumerar asentos",
     "renumber-accounting-error": "Produciuse un erro durante a renumeración de entradas no exercicio fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumeración de asentos completada",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-accounting-p": "Renumera os asientos por data, de menor a maior",
+    "renumber-invoices-p": "Renumera as facturas en base á data, de menor a maior",
+    "renumber-invoices-success": "As facturas do exercicio '%exercise%' foron renumeradas correctamente",
     "repeat-new-password": "Repite o contrasinal",
     "reply": "Resposta",
     "report": "Informe",
     "report-grouping-account": "Agrupar por contas",
     "report-non-grouping-account": "Non agrupar por contas",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Este informe permite obter a desagregación de impostos das facturas de compra ou de venda do rango seleccionado",
     "reports": "Informes",
     "request-sent": "Petición enviada",
     "requires-core": "Precisa de FacturaScripts %version%",
@@ -1287,21 +1287,21 @@
     "send": "Enviar",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
-    "send-images": "Enviar imágenes",
+    "send-images": "Enviar imaxes",
     "send-invoices": "Enviar facturas",
     "send-location": "Enviar ubicación",
     "send-mail": "Enviar correo",
     "send-mail-error": "Error ao enviar o email",
     "send-mail-ok": "Email enviado correctamente",
     "send-videos": "Enviar vídeos",
-    "sent-a-audio": "Envió un audio",
-    "sent-a-document": "Envió un documento",
-    "sent-a-location": "Envió una ubicación",
-    "sent-a-picture": "Envió una imagen",
-    "sent-a-video": "Envió un video",
-    "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-a-audio": "Enviou un audio",
+    "sent-a-document": "Enviou un documento",
+    "sent-a-location": "Enviou unha ubicación",
+    "sent-a-picture": "Enviou unha imaxe",
+    "sent-a-video": "Enviou un video",
+    "sent-message-by": "Enviado por %nick% o %date%",
     "sepa-suffix": "sufixo SEPA",
-    "september": "Septiembre",
+    "september": "Setembro",
     "sequences": "Secuencias",
     "serial-number": "Número de serie",
     "serie": "Serie",
@@ -1363,7 +1363,7 @@
     "stock-transfers": "Transferencias de stock",
     "stockmax": "Stock máx.",
     "stockmin": "Stock mín.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Límite de almacenamento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Límite de almacenamento alcanzado",
     "structured-data-csv": "Ficheiro CSV",
     "sub-account": "Sub-conta",
@@ -1408,7 +1408,7 @@
     "supplier-products": "Produtos provedores",
     "supplier-reference": "Referencia do provedor",
     "suppliers": "Provedores",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "supported-tax-re-subaccount": "Subconta recargo soportado",
     "supported-tax-subaccount": "Subconta IVE soportado",
     "surcharge": "Recarga",
     "surname": "Apelidos",
@@ -1480,7 +1480,7 @@
     "transfers-stock": "Transferencias de stock",
     "translation": "Tradución",
     "translations": "Traducións",
-    "travel": "Viaje",
+    "travel": "Viaxe",
     "try-again-later": "Probe de novo máis tarde",
     "tuesday": "Martes",
     "type": "Tipo",
@@ -1494,7 +1494,7 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Asento descuadrado",
     "unchecked": "Non comprobado",
     "under-minimums": "Baixo mínimos",
     "undo": "Desfacer",
@@ -1521,7 +1521,7 @@
     "url": "Sitio web",
     "use-gaps": "Usar ocos",
     "user": "Usuario",
-    "user-and-config": "Usuario y configuración",
+    "user-and-config": "Usuario e configuración",
     "users": "Usuarios",
     "using-apc": "Usando caché APC",
     "using-filecache": "Usando Filecache",
@@ -1540,16 +1540,16 @@
     "vat": "IVE",
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-is-short": "O número '%vat-number%' é demasiado corto",
+    "vat-number-not-vies": "O número '%vat-number%' non está rexistrado no sistema VIES",
     "vat-regime": "Réxime do IVE",
     "VAT-register": "Libro de impostos",
     "vat-regularization": "Regularización de Impostos",
     "vehicle": "Vehículo",
     "verified": "verificado",
     "version": "Versión",
-    "video": "Video",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "video": "Vídeo",
+    "vies-check-success": "O múmero '%vat-number%' está rexistrado no sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal ou neto",
     "warehouse": "Almacén",
     "warehouse-cant-be-same": "O almacén de orixe e destino non pode ser o mesmo.",
@@ -1575,9 +1575,9 @@
     "wizard": "asistente",
     "wizard-p": "Cubra este formulario sobre o seu negocio para rematar a configuración.",
     "wizard-plugins": "Un plugin é un complemento que engade novas funcionalidades. Selecciona os plugins que queras activar de inmediato, ou faino máis tarde dende o panel de control.",
-    "work-events": "Eventos de trabajo",
-    "working-hours": "Horario de trabajo",
-    "write-a-message-here": "Escribe un mensaje aquí",
+    "work-events": "Eventos de traballo",
+    "working-hours": "Horario de traballo",
+    "write-a-message-here": "Escribe unha mensaxe aquí",
     "x-column": "Columna X",
     "x-operation": "Operación sobre X",
     "y-column": "Columna I",
@@ -1590,9 +1590,9 @@
     "you-cant-delete-primary-variant": "Non podes eliminar a variante principal do produto",
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
-    "you-sent-a-location": "Enviaste una ubicación",
-    "you-sent-a-picture": "Enviaste una imagen",
-    "you-sent-a-video": "Enviaste un video",
+    "you-sent-a-location": "Enviaste unha ubicación",
+    "you-sent-a-picture": "Enviaste unha imaxe",
+    "you-sent-a-video": "Enviaste un vídeo",
     "you-should-change-passwd": "Debería cambiar o seu contrasinal",
     "your": "seu",
     "zip-code": "Código postal",
