Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1340,6 +1340,8 @@
     "smaller-than": "Menor que",
     "social-security-number": "Nombre Seguretat Social",
     "sort": "Ordre",
+    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por fecha desc.",
     "source": "Font",
     "source-code": "Codi font",
     "special-account": "Compte especial",
