--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -268,7 +268,7 @@
     "company-commission-info": "It will only apply to the selected company",
     "company-manager": "Company manager",
     "company-name": "Company name",
-    "company-warehouse": "Empresa\/Almacén",
+    "company-warehouse": "Company\/Warehouse",
     "comparative": "Comparative",
     "compared": "Compared",
     "compatible": "Compatible",
@@ -454,7 +454,7 @@
     "documents-generated": "Documents generated",
     "domiciled": "Domiciled",
     "done": "Done",
-    "done-date": "Fecha finalización",
+    "done-date": "Done date",
     "dont-sell-above-pvp": "Don't sell above retail price",
     "dont-sell-below-cost": "Don't sell below cost",
     "download": "Download",
@@ -466,7 +466,7 @@
     "dto": "Disc.",
     "dto-2": "Discount 2",
     "duplicate-record": "Duplicated record",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Reference '%reference%' duplicated",
     "duplicated-request": "Duplicated request",
     "duration": "Duration",
     "edit": "Edit",
@@ -474,7 +474,7 @@
     "email": "E-mail",
     "email-bcc": "Email Blind Carbon Copy",
     "email-cc": "Email Carbon Copy",
-    "email-not-configured": "Email not configured. You can configure the email from the administrator menu, control panel, application preferences.",
+    "email-not-configured": "Email not configured. You can configure email from the administrator menu, control panel, application preferences.",
     "email-not-sent": "Not sent",
     "email-notification": "Email notification",
     "email-notification-not-exists": "Email notification %name% not found",
@@ -506,7 +506,7 @@
     "equivalent-account-not-found": "Couldn't find equivalent account to %accountCode% in exercise %exerciseCode%. Have you imported the chart of accounts?",
     "equivalent-subaccount-not-found": "No subaccount equivalent to %subAccountCode% was found for copying.",
     "error": "ERROR: %error%",
-    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
+    "error-checking-vat-number": "Error checking '%vat-number%' in VIES system",
     "error-connecting-memcache": "Error connecting to Memcache server.",
     "error-deleting-lines": "Error deleting lines",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
@@ -541,8 +541,8 @@
     "estimation-email-subject": "Your estimation %code%",
     "estimation-email-text": "Hello, I am attaching your estimation %code%",
     "estimations": "Estimations",
-    "event": "Evento",
-    "events": "Eventos",
+    "event": "Event",
+    "events": "Events",
     "exceptions": "Exceptions",
     "excess": "Excess",
     "exclude-invalid": "Exclude invalid",
@@ -565,7 +565,7 @@
     "export": "Export",
     "export-bill": "export-bill",
     "extra-file": "Extra file",
-    "failed": "Fallido",
+    "failed": "Failed",
     "families": "Families",
     "family": "Family",
     "family-code": "Family code",
@@ -610,7 +610,7 @@
     "footer-text": "Footer text",
     "for-admins": "For administrators",
     "for-all": "For everyone",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "For all exercises",
     "for-purchase": "For purchase",
     "for-sale": "For sale",
     "foresee": "Foresee",
@@ -633,7 +633,7 @@
     "general-concepts": "General concepts",
     "general-data": "General data",
     "generate": "Generate",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Generate accounting entries",
     "generate-accounting-entry": "Generate accounting entry",
     "generate-doc-type": "Generate document type",
     "generate-invoice": "Generate invoice",
@@ -681,7 +681,7 @@
     "group-or-split-p": "This wizard allows you to generate a new document from the lines of others. Select the quantities you want to use, the date of the new document and press the generate button.",
     "grouping-type": "Group",
     "groups": "Groups",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Has attachments",
     "has-parent": "Has parent",
     "hash": "Hash",
     "header": "Header",
@@ -743,7 +743,7 @@
     "invalid-date-there-are-invoices-after": "Invalid Date. There are already invoices dated after %date%",
     "invalid-date-there-are-invoices-before": "Invalid date. The date %date% is later than that of the following invoice.",
     "invalid-iban": "Invalid IBAN: %iban%",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Invalid ISO code ''%iso-code%''.",
     "invalid-number": "Invalid number: %number%",
     "invalid-request": "Invalid request",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -834,8 +834,8 @@
     "ledger": "Ledger",
     "left": "Left",
     "level": "Level",
-    "level-benefit-sales": "Nivel para ver beneficios",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-benefit-sales": "Level to see benefits",
+    "level-cost-sales": "Level to see costs",
     "level1": "Level 1",
     "level2": "Level 2",
     "level3": "Level 3",
@@ -983,7 +983,7 @@
     "no-invoice": "No invoice",
     "no-outstanding-amount": "There is no outstanding amount",
     "no-print-permission": "You do not have permission to print or export",
-    "no-reference": "Sin referencia",
+    "no-reference": "No reference",
     "no-selected-item": "No selected item",
     "no-stock": "Do not control stock",
     "non-editable-accounting-entry": "Non-editable accounting entry",
@@ -995,7 +995,7 @@
     "not-allowed-modify": "You do not have permission to modify",
     "not-enough-stock": "Not enough stock of %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Content not stored",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "The %type% %number% is not valid",
     "not-valid-percentage-retention": "Not valid percentage retention",
@@ -1007,7 +1007,7 @@
     "notifications": "Notifications",
     "november": "November",
     "number": "Number",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "No. of attachments",
     "number-length": "Number length",
     "number-recipients": "Recipients no.",
     "number2": "Number 2",
@@ -1080,7 +1080,7 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
-    "pct-tax": "% impuestos",
+    "pct-tax": "tax rate",
     "pct-vat": "VAT rate",
     "pending": "Pending",
     "pending-invoices-button": "Risk:",
@@ -1340,6 +1340,8 @@
     "smaller-than": "Smaller than",
     "social-security-number": "Social Security number",
     "sort": "Order",
+    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por fecha desc.",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Special account",
