--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1340,6 +1340,8 @@
     "smaller-than": "Baino txikiagoa",
     "social-security-number": "Gizarte segurantza zenbakia",
     "sort": "Ordena",
+    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por fecha desc.",
     "source": "Hornidura",
     "source-code": "Iturburu-kodea",
     "special-account": "Kontu berezia",
