--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1340,6 +1340,8 @@
     "smaller-than": "Plus petit que",
     "social-security-number": "Numéro de sécurité sociale",
     "sort": "Commande",
+    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por fecha desc.",
     "source": "Source",
     "source-code": "Code source",
     "special-account": "Compte spécial",
