--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1340,6 +1340,8 @@
     "smaller-than": "Máis pequena que",
     "social-security-number": "Número Seguridade Social",
     "sort": "Orde",
+    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por fecha desc.",
     "source": "Fonte",
     "source-code": "Código fonte",
     "special-account": "Conta especial",
