--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1340,6 +1340,8 @@
     "smaller-than": "Menor que",
     "social-security-number": "Social Security number",
     "sort": "Order",
+    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por fecha desc.",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Conta especial",
