--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1340,6 +1340,8 @@
     "smaller-than": "Menor que",
     "social-security-number": "Número Seguridad Social",
     "sort": "Orden",
+    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por fecha desc.",
     "source": "Fuente",
     "source-code": "Código fuente",
     "special-account": "Cuenta especial",
