--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1340,6 +1340,8 @@
     "smaller-than": "Més menut que",
     "social-security-number": "Número de la Seguritat Social",
     "sort": "Orde",
+    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por fecha desc.",
     "source": "Fuente",
     "source-code": "Codi font",
     "special-account": "Conte especial",
