Mejoras en el modal del widget library.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Afegir tot desactivat",
     "add-all-enabled": "Afegir tot activat",
     "add-extra-lines": "Afegir línies extra",
+    "add-file": "Añadir archivo",
     "add-invoices": "Afegir factures",
     "add-new-plugin": "Afegir nou plugin",
     "additional-text": "Text addicional",
