--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Alle deaktivierten hinzufügen",
     "add-all-enabled": "Alles hinzufügen aktiviert",
     "add-extra-lines": "zusätzliche Zeilen hinzufügen",
+    "add-file": "Añadir archivo",
     "add-invoices": "Rechnungen hinzufügen",
     "add-new-plugin": "Neues Plugin hinzufügen",
     "additional-text": "Zusatztext",
