--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Add all disabled",
     "add-all-enabled": "Add all enabled",
     "add-extra-lines": "Add extra lines",
+    "add-file": "Añadir archivo",
     "add-invoices": "Add invoices",
     "add-new-plugin": "Add new plugin",
     "additional-text": "Additional text",
@@ -1159,7 +1160,7 @@
     "profile": "Profile",
     "profit-and-loss": "Profit and Loss",
     "profit-and-loss-balance": "Profit and loss accounts",
-    "profits": "Beneficios",
+    "profits": "Benefits",
     "project": "Project",
     "projects": "Projects",
     "provider-reference": "Provider reference",
@@ -1203,7 +1204,7 @@
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "Rectified invoice",
     "rectified-invoice-p": "Invoices are commercial documents and have a number of legal restrictions. They cannot be deleted or modified, only total or partial returns are allowed. Use this form to make a return of this invoice.",
-    "rectifying": "Rectificativa",
+    "rectifying": "Rectification",
     "rectifying-serie": "Rectifying serie",
     "redirect": "Redirect",
     "reference": "Reference",
@@ -1235,13 +1236,13 @@
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
     "renumber-accounting-p": "Renumbers entries by date, from lowest to highest",
     "renumber-invoices-p": "Renumber invoices based on date, from lowest to highest",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-invoices-success": "Invoices from exercise '%exercise%' have been renumbered correctly",
     "repeat-new-password": "Repeat password",
     "reply": "Reply",
     "report": "Report",
     "report-grouping-account": "Group by account",
     "report-non-grouping-account": "Non group by account",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "This report allows you to obtain the tax breakdown from purchase or sale invoices in the selected range",
     "reports": "Reports",
     "request-sent": "Request sent",
     "requires-core": "FacturaScripts %version% required",
@@ -1332,7 +1333,7 @@
     "show-quantity": "Show quantity on print",
     "signature": "Signature",
     "simple": "Simple",
-    "simplified": "Simplificada",
+    "simplified": "Simplified",
     "size": "Size",
     "sketch": "Boceto",
     "sketch-invoice-warning": "This invoice is still a draft. Make it official by changing its status to issued.",
@@ -1340,8 +1341,8 @@
     "smaller-than": "Smaller than",
     "social-security-number": "Social Security number",
     "sort": "Order",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-date-asc": "Sort by date asc.",
+    "sort-by-date-desc": "Sort by date desc.",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Special account",
@@ -1365,7 +1366,7 @@
     "stock-transfers": "stock transfers",
     "stockmax": "Stock max.",
     "stockmin": "Stock min.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Storage limit almost reached (%limit%). Remain %free%.",
     "storage-limit-reached": "Storage limit reached",
     "structured-data-csv": "CSV file",
     "sub-account": "Sub-account",
@@ -1542,8 +1543,8 @@
     "vat": "VAT",
     "vat-document": "VAT Document",
     "vat-exception": "VAT Exception",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-is-short": "The number '%vat-number%' is too short",
+    "vat-number-not-vies": "Number '%vat-number%' is not registered in VIES system",
     "vat-regime": "VAT Regime",
     "VAT-register": "VAT registration",
     "vat-regularization": "VAT Regularization",
@@ -1551,7 +1552,7 @@
     "verified": "Verified",
     "version": "Version",
     "video": "Video",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "vies-check-success": "Number '%vat-number%' is registered in VIES system",
     "view-column-net-subtotal": "See subtotal or net column",
     "warehouse": "Warehouse",
     "warehouse-cant-be-same": "The origin and destination warehouse can not be the same.",
@@ -1577,7 +1578,7 @@
     "wizard": "Wizard",
     "wizard-p": "Fill out this form about your business to finish the configuration.",
     "wizard-plugins": "A plugin adds functionality. Select the plugins you want to activate immediately, or you can do it later from the control panel.",
-    "work-events": "Eventos de trabajo",
+    "work-events": "Working events",
     "working-hours": "Work schedule",
     "write-a-message-here": "Write a message here",
     "x-column": "X column",
