--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "gehitu dena ezgaitua",
     "add-all-enabled": "Aktibatutako guztiak gehitu",
     "add-extra-lines": "Gehitu lerro gehigarriak",
+    "add-file": "Añadir archivo",
     "add-invoices": "Gehitu fakturak",
     "add-new-plugin": "Plugin berria gehitu",
     "additional-text": "Testu gehigarria",
