--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Ajouter tous les handicapés",
     "add-all-enabled": "Ajouter tous les éléments activés",
     "add-extra-lines": "Ajouter des lignes supplémentaires au nouveau document",
+    "add-file": "Añadir archivo",
     "add-invoices": "Ajouter factures",
     "add-new-plugin": "Ajouter un nouveau plugin",
     "additional-text": "Texte aditionnel",
