--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Engadir todo deshabilitado",
     "add-all-enabled": "Engadir todo activado",
     "add-extra-lines": "Engadir liñas extra",
+    "add-file": "Añadir archivo",
     "add-invoices": "Engadir facturas",
     "add-new-plugin": "Engadir novo complemento",
     "additional-text": "Texto adicional",
@@ -1340,8 +1341,8 @@
     "smaller-than": "Máis pequena que",
     "social-security-number": "Número Seguridade Social",
     "sort": "Orde",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-date-asc": "Ordear por data asc.",
+    "sort-by-date-desc": "Ordear por data desc.",
     "source": "Fonte",
     "source-code": "Código fonte",
     "special-account": "Conta especial",
