--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Add all disabled",
     "add-all-enabled": "Add all enabled",
     "add-extra-lines": "add-extra-lines",
+    "add-file": "Añadir archivo",
     "add-invoices": "Aggiungi fatture",
     "add-new-plugin": "Aggiungi un nuovo plug-in",
     "additional-text": "additional-text",
