--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Adicionar todos desativados",
     "add-all-enabled": "Adicionar tudo ativado",
     "add-extra-lines": "Adicionar linhas extra",
+    "add-file": "Añadir archivo",
     "add-invoices": "adicionar faturas",
     "add-new-plugin": "Adicionar novo plugin",
     "additional-text": "texto adicional",
