--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Adicionar tudo desabilitado",
     "add-all-enabled": "Adicionar tudo habilitado",
     "add-extra-lines": "Adicionar linhas extra",
+    "add-file": "Añadir archivo",
     "add-invoices": "Adicionar Faturas",
     "add-new-plugin": "Adicionar novo plugin",
     "additional-text": "Texto adicional",
