--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Afegir tot desactivat",
     "add-all-enabled": "Afegir-ho tot activat",
     "add-extra-lines": "Afegir línies extra",
+    "add-file": "Añadir archivo",
     "add-invoices": "Afegir factures",
     "add-new-plugin": "Afegir un nou complement",
     "additional-text": "Text adicional",
