--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -53,6 +53,7 @@
     "add-all-disabled": "Añadir todo Deshabilitado",
     "add-all-enabled": "Añadir todo activado",
     "add-extra-lines": "Añadir líneas extra",
+    "add-file": "Añadir archivo",
     "add-invoices": "Añadir facturas",
     "add-new-plugin": "Añadir nuevo plugin",
     "additional-text": "Texto adicional",
